# rsac_relatorios_risco

./: .env.example  .gitignore  CLAUDE.md  Prompt_Request.txt  agent_jarbis.py  pyproject.toml  requirements.txt  rsac_dispatcher.bpmn  rsac_performer.bpmn
Models/: Config.xlsx  Mapa_Seletores_RSA.xlsx  Modelo_PlanilhaPrincipal.xlsx  rpas1004_00_RELATORIO_RISCO_COOPERATIVA_20260313_182416_0644.XLSX.XLSX.XLSX
config/: processes_to_kill.json  (+1 more)
lib_sisbr_desktop/: .gitignore  README.md  enable_colors.ps1  pyproject.toml  requirements.txt
lib_sisbr_desktop/src/lib_sisbr_desktop/: config.py
lib_sisbr_desktop/src/lib_sisbr_desktop/core/: abrir_sisbr.py  acessar_cliente_por_cpf_cnpj.py  acessar_modulo.py  acessar_submodulo.py  login.py  trocar_cooperativa.py
lib_sisbr_desktop/src/lib_sisbr_desktop/gui/: helpers.py  mapeamento.py  typer.py
lib_sisbr_desktop/src/lib_sisbr_desktop/utils/: __init__.py  error_handler.py  extrair_avalistas.py  filesystem.py  identificador.py  inspecionar_edits.py  inspecionar_janela.py  log.py  popup_handler.py  retry.py  screen_utils.py  status.py  utils.py  wait.py  window.py
lib_sisbr_desktop/tests/: __init__.py  database.py  etapa_downloads.py  main.py  upload_sharepoint.py
lib_sisbr_desktop/tests/script_tests/: atualizar_item.py  get_item.py  sumula_credito.py  test_upload_sharepoint_manual.py  teste_carteira_cadente.py  teste_click_coordenadas.py  teste_conta_corrente.py  teste_lancamentos.py  teste_multiplos_faturamentos.py  teste_painel_comercial.py  teste_scan_sisbr.py  teste_upload_sharepoint.py  teste_upload_simples.py
(+99 files in other folders)
